syntax = "proto3";

option go_package = "sources/pb";

import "google/protobuf/timestamp.proto";

message Common {
    enum Gender {
        GENDER_UNKNOWN = 0;
        // мужчина
        GENDER_MALE = 1;
        // женщина
        GENDER_FEMALE = 2;
    }

    enum UserClass {
        USERCLASS_UNKNOWN = 0;
        // новичок
        USERCLASS_BEGINNER = 1;
        // активист
        USERCLASS_ACTIVIST = 2;
        // авторитет
        USERCLASS_AUTHORITY = 3;
        // философ
        USERCLASS_PHILOSOPHER = 4;
        // магистр
        USERCLASS_MASTER = 5;
        // гранд-мастер
        USERCLASS_GRANDMASTER = 6;
        // миродержец
        USERCLASS_PEACEKEEPER = 7;
        // миротворец
        USERCLASS_PEACEMAKER = 8;
    }

    message UserLink {
        // id пользователя
        uint64 id = 1;
        // логин
        string login = 2;
        // имя
        string name = 3;
        // пол
        Gender gender = 4;
        // аватар
        string avatar = 5;
        // класс
        UserClass class = 6;
        // подпись на форуме
        string sign = 7;
    }

    message Creation {
        // пользователь
        UserLink user = 1;
        // дата создания
        google.protobuf.Timestamp date = 2;
    }

    message Pages {
        // текущая
        uint64 current = 1;
        // количество
        uint64 count = 2;
    }

    message Attachment {
        // ссылка на файл
        string url = 1;
        // размер (байт)
        uint64 size = 2;
    }

    message SuccessResponse {}

    message SuccessIdResponse {
        // идентификатор
        uint64 id = 1;
    }

    message FileUploadResponse {
        // URL на загрузку файла
        string url = 1;
    }
}
