syntax = "proto3";

option go_package = "sources/pb";

import "proto/common.proto";
import "google/protobuf/timestamp.proto";

message Forum {
    message TopicLink {
        // id темы
        uint64 id = 1;
        // название
        string title = 2;
    }

    message TopicMessageDraft {
        // id темы
        uint64 topic_id = 1;
        // данные о создании
        Common.Creation creation = 2;
        // текст
        string text = 3;
        // аттачи
        repeated Common.Attachment attachments = 4;
    }

    message LastMessage {
        // id сообщения
        uint64 id = 1;
        // тема, в которую входит сообщение
        TopicLink topic = 2;
        // автор
        Common.UserLink user = 3;
        // текст
        string text = 4;
        // дата и время создания
        google.protobuf.Timestamp date = 5;
    }

    message TopicMessage {
        message Stats {
            // рейтинг
            int64 rating = 1;
        }

        message Rights {
            // на редактирование
            bool canEdit = 1;
            // на удаление
            bool canDelete = 2;
            // на выставление "минуса" сообщению
            bool canVoteMinus = 3;
            // на выставление "плюса" сообщению
            bool canVotePlus = 4;
            // на удаление рейтинга (для модераторов)
            bool canDeleteVotes = 5;
        }

        // id сообщения
        uint64 id = 1;
        // данные о создании
        Common.Creation creation = 2;
        // текст
        string text = 3;
        // текст изъят модератором?
        bool is_censored = 4;
        // сообщение не прочитано? (для залогиненных пользователей)
        bool is_unread = 5;
        // аттачи
        repeated Common.Attachment attachments = 6;
        // статистика
        Stats stats = 7;
        // права
        Rights rights = 8;
    }

    message Poll {
        message AnswerOption {
            // текст
            string text = 1;
            // количество проголосовавших (если опрос окончен)
            uint64 voter_count = 2;
        }

        // варианты ответов
        repeated AnswerOption answer_options = 1;
        // проголосовавшие пользователи (если опрос окончен)
        repeated Common.UserLink voters = 2;
    }

    message Topic {
        enum Type {
            UNKNOWN_TYPE = 0;
            // тема
            TOPIC = 1;
            // опрос
            POLL = 2;
        }

        message Stats {
            // количество сообщений
            uint64 message_count = 1;
            // количество непрочитанных сообщений (для залогиненных пользователей)
            uint64 not_read_message_count = 2;
            // количество просмотров
            uint64 view_count = 3;
        }

        // id темы
        uint64 id = 1;
        // название
        string title = 2;
        // тип
        Type topic_type = 3;
        // данные о создании
        Common.Creation creation = 4;
        // тема закрыта?
        bool is_closed = 5;
        // тема закреплена?
        bool is_pinned = 6;
        // тема не отмодерирована? (для модераторов и авторов тем)
        bool is_not_moderated = 7;
        // пользователь подписан на тему? (для залогиненных пользователей)
        bool is_subscribed = 8;
        // статистика
        Stats stats = 9;
        // последнее сообщение
        LastMessage last_message = 10;
        // id первого непрочитанного сообщения (для залогиненных пользователей)
        uint64 first_not_read_message_id = 11;
    }

    message Forum {
        message Stats {
            // количество тем
            uint64 topic_count = 1;
            // количество неотмодерированных тем (для модераторов)
            uint64 not_moderated_topic_count = 2;
            // количество сообщений
            uint64 message_count = 3;
            // количество непрочитанных сообщений (для залогиненных пользователей)
            uint64 not_read_message_count = 4;
        }

        // id форума
        uint64 id = 1;
        // название
        string title = 2;
        // описание
        string forum_description = 3;
        // модераторы
        repeated Common.UserLink moderators = 4;
        // статистика
        Stats stats = 5;
        // последнее сообщение
        LastMessage last_message = 6;
    }

    message ForumBlock {
        // id блока форумов
        uint64 id = 1;
        // название
        string title = 2;
        // форумы
        repeated Forum forums = 3;
    }

    message ForumBlocksResponse {
        // список блоков форумов
        repeated ForumBlock forum_blocks = 1;
    }

    message ForumTopicsResponse {
        // модераторы
        repeated Common.UserLink moderators = 1;
        // список тем
        repeated Topic topics = 2;
        // страницы
        Common.Pages pages = 3;
    }

    message ForumTopicResponse {
        // тема
        Topic topic = 1;
        // форум, в который входит тема
        Forum forum = 2;
        // опрос (если есть)
        Poll poll = 3;
        // закрепленное сообщение, если есть
        TopicMessage pinned_message = 4;
        // сообщения
        repeated TopicMessage messages = 5;
        // черновик, если есть (для залогиненных пользователей)
        TopicMessageDraft message_draft = 6;
        // страницы
        Common.Pages pages = 7;
    }

    message ForumMessageResponse {
        // сообщение
        TopicMessage message = 1;
    }

    message ForumMessageDraftResponse {
        // черновик сообщения
        TopicMessageDraft message_draft = 1;
    }
}
